"""
ZeroG Compute gRPC client.

This is a thin wrapper around the ZeroG compute sidecar gRPC service.
"""

import time
from typing import Any, Dict, Optional

from chaoschain_integrations.common.config import ZeroGConfig
from chaoschain_integrations.common.errors import (
    ConnectionError,
    ResourceNotFoundError,
)
from chaoschain_integrations.common.logging import get_logger
from chaoschain_integrations.compute.zerog.schemas import (
    ZeroGCancelResponse,
    ZeroGResultResponse,
    ZeroGStatusResponse,
    ZeroGSubmitResponse,
)

logger = get_logger(__name__)


class ZeroGComputeClient:
    """
    Client for ZeroG compute sidecar.

    TODO: Generate actual gRPC stubs from proto/zerog_compute.proto
    For now, this is a mock implementation.
    """

    def __init__(
        self,
        grpc_url: Optional[str] = None,
        api_key: Optional[str] = None,
        timeout_seconds: Optional[int] = None,
    ) -> None:
        """
        Initialize ZeroG compute client.

        Args:
            grpc_url: gRPC endpoint
            api_key: Optional API key
            timeout_seconds: Default timeout
        """
        config = ZeroGConfig()
        self.grpc_url = grpc_url or config.grpc_url
        self.api_key = api_key or config.api_key
        self.timeout = timeout_seconds or config.timeout_seconds

        logger.info(
            "zerog_compute_client_init",
            grpc_url=self.grpc_url,
            timeout=self.timeout,
        )

    def submit_job(
        self,
        task: Dict[str, Any],
        timeout_s: Optional[int] = None,
    ) -> ZeroGSubmitResponse:
        """
        Submit compute job to ZeroG.

        TODO: Implement actual gRPC call.
        """
        import hashlib

        logger.info("zerog_compute_submit", task_type=task.get("task_type"))

        # Mock response
        task_hash = hashlib.sha256(str(task).encode()).hexdigest()[:16]
        job_id = f"zerog_job_{task_hash}"

        return ZeroGSubmitResponse(
            job_id=job_id,
            status="pending",
            submitted_at=int(time.time()),
        )

    def get_status(
        self,
        job_id: str,
        timeout_s: Optional[int] = None,
    ) -> ZeroGStatusResponse:
        """
        Get job status.

        TODO: Implement actual gRPC call.
        """
        logger.info("zerog_compute_status", job_id=job_id)

        # Mock response - simulate completed job
        return ZeroGStatusResponse(
            job_id=job_id,
            status="completed",
            progress=100.0,
            message="Job completed successfully",
            updated_at=int(time.time()),
        )

    def get_result(
        self,
        job_id: str,
        timeout_s: Optional[int] = None,
    ) -> ZeroGResultResponse:
        """
        Get job result.

        TODO: Implement actual gRPC call.
        """
        logger.info("zerog_compute_result", job_id=job_id)

        # Mock response
        import hashlib

        execution_hash = hashlib.sha256(job_id.encode()).hexdigest()

        return ZeroGResultResponse(
            job_id=job_id,
            status="completed",
            output={"result": "mock_output", "score": 0.95},
            attestation={
                "tee_report": "mock_tee_report",
                "quote": "mock_quote",
            },
            metadata={
                "docker_digest": "sha256:abc123...",
                "enclave_pubkey": "0xmockpubkey",
                "execution_hash": execution_hash,
                "signed_result": "0xmocksignature",
            },
            completed_at=int(time.time()),
        )

    def cancel_job(
        self,
        job_id: str,
        timeout_s: Optional[int] = None,
    ) -> ZeroGCancelResponse:
        """
        Cancel job.

        TODO: Implement actual gRPC call.
        """
        logger.info("zerog_compute_cancel", job_id=job_id)

        return ZeroGCancelResponse(
            job_id=job_id,
            cancelled=True,
            message="Job cancelled successfully",
        )

